# ros_controllers

./: .gitignore  README.md
base_controller/: CMakeLists.txt  package.xml  setup.py
base_controller/config/: agriculture.yaml  cafe.yaml  empty.yaml  mud.yaml  office.yaml
base_controller/launch/: agriculture.launch  cafe.launch  empty.launch  mud.launch  office.launch
base_controller/src/: base_controller_node.py  controller.py
base_controller/srv/: MoveRobot.srv
cubic_polynomial_planner/: CMakeLists.txt  package.xml
cubic_polynomial_planner/launch/: a2.launch
cubic_polynomial_planner/src/: server.cpp
cubic_polynomial_planner/srv/: move_robot.srv
highlevel_controller/: CMakeLists.txt  package.xml
highlevel_controller/config/: a6.yaml  a7.yaml  config.yaml  default-target.yaml
highlevel_controller/include/highlevel_controller/: ActionClient.hpp  ActionServer.hpp
highlevel_controller/launch/: a5.launch  a6.launch  a7.launch
highlevel_controller/src/: ActionClient.cpp  ActionServer.cpp  highlevel_controller_client.cpp  highlevel_controller_server.cpp
highlevel_controller/worlds/: a6.world
husky_teleop_controller/: CMakeLists.txt
husky_teleop_controller/launch/: a1.launch
husky_teleop_controller/src/: husky_teleop_controller_node.cpp
inverse_dynamics_controller/: CMakeLists.txt  package.xml
inverse_dynamics_controller/config/: config.yaml
inverse_dynamics_controller/include/inverse_dynamics_controller/: Server.hpp
inverse_dynamics_controller/launch/: a4.launch
inverse_dynamics_controller/src/: inverse_dynamics_controller_node.cpp  server_class.cpp
inverse_dynamics_controller/srv/: move_robot.srv
inverse_kinematic_controller/: CMakeLists.txt  package.xml
inverse_kinematic_controller/launch/: a3.launch
inverse_kinematic_controller/src/: inverse_kinematic_controller_node.cpp
