<?xml version="1.0"?>
<package format="2">
  <name>highlevel_controller</name>
  <version>0.1.0</version>
  <description>use pinocchio in ROS</description>
  <maintainer email="syed.shabbir.ahmed@mail.mcgill.ca">Syed Shabbir Ahmed</maintainer>
  <license>BSD</license>
  <buildtool_depend>genmsg</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>Eigen3</depend>
  <depend>pinocchio</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
</package>

